@@ -56,6 +56,8 @@ Release 2.7.0 - UNRELEASED
 
     HADOOP-11410. Make the rpath of libhadoop.so configurable (cmccabe)
 
+    HADOOP-11416. Move ChunkedArrayList into hadoop-common (cmccabe)
+
   OPTIMIZATIONS
 
     HADOOP-11323. WritableComparator#compare keeps reference to byte array.
